# ocr-in

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
api/: .env.example  main.py  model_catalog.py
api/engines/: __init__.py  base.py  crnn_engine.py  ollama_vlm_engine.py  tesseract_engine.py  trocr_engine.py
api/import_jobs/: routes.py
api/inference/: corrector.py  crnn_recognizer.py  kind_detector.py  language_detect.py  searchable_pdf.py  segmenter.py  tesseract_recognizer.py  trocr_recognizer.py
api/labeling/: routes.py  store.py
api/ocr/: routes.py
api/registry/: __init__.py  registry.py
api/tests/: test_config.py  test_crnn_recognizer.py  test_engines_availability.py  test_import.py  test_kind_detector.py  test_label_routes.py  test_ocr_routes.py  test_registry.py  test_smoke.py  test_store.py  test_train_models.py  test_training.py  test_training_dataset.py  test_trocr_recognizer.py
api/training_jobs/: dataset.py  routes.py
api/util/: __init__.py  config.py  factory.py  gpu_lock.py
app/: .env.example  README.md  angular.json  package-lock.json  package.json  serve-dist.mjs
app/public/: config.json
app/src/: index.html  main.ts  styles.scss
app/src/app/: app.ts  (+5 more)
deploy/: ocr-api.service  ocr-web.service
detector/: doctr_detect.py
docs/: BENCHMARKS.md  labeling-export-import.md
training/: eval_crnn.py  eval_ollama.py  eval_tesseract.py  eval_trocr.py  personalize.py  train_crnn.py  train_trocr.py
training/augmentation/: transforms.py
training/datasets/: iam.py
training/eval/: __init__.py  metrics.py
(+57 files in other folders)
