[project]
name = "ocr-in"
version = "0.1.0"
description = "OCR of handwritten PDFs into searchable PDFs with a fine-tuning and active-learning pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pymupdf>=1.25",
    "pillow>=11.0",
    "numpy>=2.1",
]

[dependency-groups]
api = [
    "pytesseract>=0.3.13",
    "ollama>=0.4",
]
training = [
    "torch>=2.11",
    "torchvision>=0.22",
    "transformers>=4.48,<5",
    "datasets>=3.2",
    "accelerate>=1.3",
    "timm>=1.0",
    "jiwer>=3.1",
    "albumentations>=2.0",
    "opencv-python-headless>=4.11",
    "sentencepiece>=0.2",
    "protobuf>=5.29",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.uv]
default-groups = ["api", "training", "dev"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "training"]
